.local-manifest/monitor/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki

spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: http
